first version of user service still need to be tested